log
Wed 19 Apr 2023 01:48:31 AM UTC: 
 tests:  0|6
total_score: 0/70
66da31f
Wed 19 Apr 2023 01:58:11 AM UTC: 
 hashmap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:3: error: expected ‘,’ or ‘;’ before ‘while’
   45 |   while(1)
      |   ^~~~~
hashmap.c:44:6: error: unused variable ‘codigo’ [-Werror=unused-variable]
   44 | long codigo = hash(key, map->capacity)
      |      ^~~~~~
hashmap.c: In function ‘createMap’:
hashmap.c:63:17: error: expected ‘;’ before ‘mapa’
   63 |   mapa->size = 0
      |                 ^
      |                 ;
   64 |   mapa->capacity = capacity;
      |   ~~~~           
cc1: all warnings being treated as errors
Compilation failed
ee21b58
Wed 19 Apr 2023 01:58:37 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:45:1: error: expected ‘,’ or ‘;’ before ‘while’
   45 | while(1)
      | ^~~~~
hashmap.c:44:6: error: unused variable ‘codigo’ [-Werror=unused-variable]
   44 | long codigo = hash(key, map->capacity)
      |      ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
450c12e
Wed 19 Apr 2023 01:58:47 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5fea3ea
Wed 19 Apr 2023 02:48:10 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:25: error: invalid operands to binary + (have ‘Pair *’ and ‘char *’)
   49 |     map->buckets[codigo]+=key;
      |                         ^~
Compilation failed
9e5b474
Wed 19 Apr 2023 02:48:21 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:25: error: assignment to ‘Pair *’ from incompatible pointer type ‘char *’ [-Werror=incompatible-pointer-types]
   49 |     map->buckets[codigo]=key;
      |                         ^
cc1: all warnings being treated as errors
Compilation failed
88c8383
Wed 19 Apr 2023 02:48:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:25: error: comparison of distinct pointer types lacks a cast [-Werror]
   49 |     map->buckets[codigo]==key;
      |                         ^~
hashmap.c:49:25: error: statement with no effect [-Werror=unused-value]
   49 |     map->buckets[codigo]==key;
      |     ~~~~~~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
df19c02
